--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "lerna run start --stream",
+    "start": "concurrently \"npm run start --prefix packages/backend\" \"npm run start --prefix packages/frontend\"",
     "build": "lerna run build --stream",
     "install": "lerna bootstrap"
   },
@@ -25,6 +25,7 @@
     "packages/*"
   ],
   "devDependencies": {
+    "concurrently": "^9.1.2",
     "eslint": "^8.57.1",
     "eslint-config-prettier": "^10.0.2",
     "eslint-plugin-prettier": "^5.2.3",
