--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "node server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -14,5 +15,8 @@
     "@types/express": "^5.0.0",
     "@types/node": "^22.13.5",
     "ts-node": "^10.9.2"
+  },
+  "dependencies": {
+    "cors": "^2.8.5"
   }
 }
