--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,11 +1,11 @@
-// tsconfig.json (根目录)
 {
   "compilerOptions": {
     "baseUrl": ".",
     "paths": {
       "@frontend/*": ["packages/frontend/src/*"],
       "@backend/*": ["packages/backend/src/*"]
-    }
+    },
+    "esModuleInterop": true
   },
   "include": [
     "packages/frontend/src/**/*",
