--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -10,9 +10,10 @@
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.5.2",
     "@types/node": "^16.18.126",
-    "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
+    "framer-motion": "^12.4.7",
     "lerna": "^6.6.2",
+    "lucide-react": "^0.476.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-redux": "^9.2.0",
@@ -45,6 +46,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react": "^19.0.10",
     "autoprefixer": "^10.4.20",
     "postcss": "^8.5.3",
     "tailwindcss": "^4.0.9"
